# image-object-detection-cpp-yolov5-opencv

./: CMakeLists.txt  README.md  makefile
data/: classes.txt
include/: Detection.h  Detector.h  Image.h  Utils.h
includes/: Detector.h  Utils.h
src/: Detection.cpp  Detector.cpp  Image.cpp  Utils.cpp  main.cpp
